# MineDelta

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  codecov.yml  pyproject.toml
.github/: release.yml
.github/workflows/: release_minedelta.yml  release_nbtcompare.yml  test.yml
NBTCompare/: Cargo.toml  README.md  pyproject.toml
NBTCompare/src/: lib.rs
NBTCompare/src/nbtcompare/: __init__.py
src/mineback/: __init__.py  nbt.py  region.py
src/mineback/backup/: base.py  diff.py  git.py  hardlink.py
src/minedelta/: _dummy_executor.py  _dumy_executor.py  nbt.py  region.py
src/minedelta/backup/: __init__.py  base.py  diff.py  git.py  hardlink.py
tests/: helpers.py  test__dummy_executor.py  test_nbtcompare.py  test_region.py
tests/backup/: conftest.py  test_all.py
