[project]
name = "minedelta"
version = "0.0.1"
requires-python = ">=3.11"
description = "(UNOFFICIAL) Minecraft Server Backup System"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Pearsteam", email = "93873756+Birnendampf@users.noreply.github.com" }
]
keywords = ["minecraft", "minecraft server", "differential backup", "backup", "versioning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Topic :: System :: Archiving",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: Games/Entertainment",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]

dependencies = [
    "msgspec>=0.20.0",
    "typing-extensions>=4.5 ; python_full_version < '3.12'",
]

[project.urls]
Source = "https://github.com/Birnendampf/MineDelta"

[project.optional-dependencies]
git = [
    "dulwich>=1.0.0",
]
lz4 = [
    "lz4>=4.4.5",
]
fast = [
    "nbtcompare==0.1.0",
]
standard = [
    "dulwich>=1.0.0",
    "lz4>=4.4.5",
    "nbtcompare==0.1.0",
]

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    { include-group = "lint" },
    "pre-commit>=4.5.1",
]
lint = [
    { include-group = "test" },
    "mypy>=1.19.1",
    "ruff>=0.15.1",
]
test = [
    "minedelta[standard]",
    "pytest-cov>=7.0.0",
    "rapidnbt>=1.3.5",
]

[tool.uv.workspace]
members = [
    "NBTCompare",
]

[tool.uv.sources]
nbtcompare = { workspace = true }


[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = [
    "ANN",
    "ASYNC",
    "S",
    "B",
    "PT",
    "RET",
    "SIM",
    "TC",
    "PTH",
    "I",
    "C90",
    "N",
    "PERF",
    "D",
    "PL",
    "UP",
    "RUF",
]
ignore = [
    "D104",
    "PLR2004",
    "PLR0912", # covered by C90
    "PTH123",
]


[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "S101", "ANN20"]


[tool.mypy]
strict = true
packages = ["minedelta", "tests", "nbtcompare"]

[[tool.mypy.overrides]]
module = ["lz4.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["rapidnbt.*"]
follow_untyped_imports = true

[tool.coverage.run]
branch = true
source = ["nbtcompare", "minedelta"]
command_line = "-m pytest"
